load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
  name = "go_default_library",
  srcs = [ "sample.go" ],
  importpath = "bazel-go-test/sample",
)

go_test(
  name = "go_default_test",
  size = "small",
  srcs = [
    "sample_test.go",
  ],
  data = glob([
    "testdata/*",
  ]),
  embed = [":go_default_library"],
)
